--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -27,9 +32,18 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
+        - { path: ^/(products|user|category|sub|home), roles: ROLE_ADMIN}
+        - { path: ^/(products|user|category|sub)/new, roles: ROLE_ADMIN }
+        - { path: ^/(products|user|category|sub)/\d+, roles: ROLE_ADMIN , methods: [POST] }
+        - { path: ^/(products|user|category|sub)/\d+/edit, roles: ROLE_ADMIN }
+        - { path: ^/api/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        # manager inherits from user
+        ROLE_MANAGER: ROLE_USER
+        # admin inherits from manager
+        ROLE_ADMIN: ROLE_MANAGER
 when@test:
     security:
         password_hashers:
