--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "sensio/framework-extra-bundle": "^6.2",
+        "stripe/stripe-php": "^13.16",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
