--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.slugger_to_lower: true
+    stripe_secret_key: 'YOUR_STRIPE_SECRET_KEY'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -22,5 +23,12 @@ services:
     App\Service\MySlugger:
         arguments:
             $toLower: '%app.slugger_to_lower%'
+    
+    App\Service\StripePayment:
+        arguments:
+            $stripeSecretKey: '%stripe_secret_key%'
+
+    App\Service\ProductService:
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
